--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -267,3 +267,41 @@ li {
     background-color: white;
     filter: invert(100%);
 }
+
+.pagination {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    cursor: pointer;
+  }
+ 
+  .pagination{
+    cursor: pointer;
+      max-width: 40vw;
+      display: flex;
+      flex-direction: row;
+  }
+  .pagination li{
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    background-color: white;
+    border: 2px solid black;
+    padding: 5px;
+    cursor: pointer;
+    max-width: 5rem;
+    border-top-left-radius: 0.85rem;
+    border-bottom-left-radius: 0.85rem;
+    font-size: 1rem;
+    flex-direction: row;
+    max-width: 6vw;
+    justify-content: center;
+    align-items: center;
+  }
+  .pagination li:hover{
+    filter: invert(100%);
+  }
+  .pages-pagination{
+      height: 20px;
+      width: 20px;
+  }
+  
