--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -23,13 +23,14 @@ body {
 
 .conteiner {
     min-width: 50vw;
+    min-height: 98vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    
     border: 2px solid black;
     padding: 3rem;
-    margin-top: 5vh;
+    margin-top: 1vh;
     border-radius: 3rem;
 }
 
@@ -97,7 +98,9 @@ body {
     font-size: 1.5rem;
     padding: 0.5rem;
 }
-
+.filter__button-done:active{
+    background-color: black;
+}
 
 .filter__button-undone {
     background-color: white;
@@ -163,6 +166,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 42vh;
+    min-width: 35vw;
 }
 
 .changer {
@@ -200,6 +205,9 @@ li {
     justify-content: center;
     align-items: center;
     display: flex;
+    border:none;
+    font-size: 2rem;
+    max-width: 17vw;
 }
 
 [data-tooltip] {
@@ -242,7 +250,7 @@ li {
     margin-right: 2rem;
     border-top-left-radius: 0.85rem;
     border-bottom-left-radius: 0.85rem;
-
+    
 }
 
 .todo-list__button:hover {
@@ -268,40 +276,28 @@ li {
     filter: invert(100%);
 }
 
-.pagination {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    cursor: pointer;
-  }
- 
-  .pagination{
-    cursor: pointer;
-      max-width: 40vw;
-      display: flex;
-      flex-direction: row;
-  }
-  .pagination li{
+
+  .pagination-button{
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     background-color: white;
     border: 2px solid black;
     padding: 5px;
     cursor: pointer;
-    max-width: 5rem;
-    border-top-left-radius: 0.85rem;
-    border-bottom-left-radius: 0.85rem;
+    
     font-size: 1rem;
     flex-direction: row;
     max-width: 6vw;
     justify-content: center;
     align-items: center;
   }
-  .pagination li:hover{
+  .pagination-button:hover{
     filter: invert(100%);
   }
-  .pages-pagination{
-      height: 20px;
-      width: 20px;
-  }
   
+  .paginate{
+      width: 40vw;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
