--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -41,6 +41,15 @@ body {
   font-size: 2rem;
 }
 
+.todo__text-error {
+  width: 40vw;
+  height: 3rem;
+  border: 2px solid black;
+  background-color: rgb(179, 90, 90);
+  border-radius: 0.5rem;
+  font-size: 2rem;
+}
+
 .paginate__button {
     min-width: 2vw;
     min-height: 3vh;
@@ -210,6 +219,12 @@ li {
     font-size: 1.6rem;
     max-width: 13vw;
 }
+
+.todo-list__input-error{
+  font-size: 1.6rem;
+    max-width: 13vw;
+  background-color: rgb(194, 101, 101);
+ }
 
 [data-tooltip] {
   position: relative;
