--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -26,9 +26,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   border: 2px solid black;
-  padding: 3rem;
+  padding: 2rem;
   margin-top: 1vh;
   border-radius: 3rem;
 }
@@ -40,6 +39,8 @@ body {
   border-radius: 0.5rem;
   font-size: 2rem;
 }
+
+
 
 .todo__text-error {
   width: 40vw;
@@ -53,6 +54,8 @@ body {
 .paginate__button {
     min-width: 2vw;
     min-height: 3vh;
+    width: 4vw;
+   height: 6vh;
   max-width: 4vw;
   max-height: 6vh;
   /* Safari */
@@ -90,7 +93,8 @@ body {
   width: 40vw;
 }
 
-.filter__button-all {
+
+.filter__button{
   background-color: white;
   color: black;
   border: 2px solid black;
@@ -101,46 +105,18 @@ body {
   padding: 0.5rem;
 }
 
-.filter__button-done {
-  background-color: white;
-  color: black;
-  border: 2px solid black;
-  transition-duration: 0.4s;
-  font-size: 0.9rem;
-  margin-left: 2px;
-  margin-right: 2px;
-  cursor: pointer;
-  border-radius: 1rem;
-  font-size: 1.5rem;
-  padding: 0.5rem;
-}
-.filter__button-done:active {
-  background-color: black;
-}
-
-.filter__button-undone {
-  background-color: white;
-  color: black;
-  border: 2px solid black;
-  transition-duration: 0.4s;
-  font-size: 0.9rem;
-  cursor: pointer;
-  border-radius: 1rem;
-  font-size: 1.5rem;
-  padding: 0.5rem;
-}
-
-.filter__button-all:hover {
+.filter__button-active{
   background-color: black;
   color: white;
+  border: 2px solid white;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  padding: 0.5rem;
 }
 
-.filter__button-done:hover {
-  background-color: black;
-  color: white;
-}
-
-.filter__button-undone:hover {
+.filter__button:hover {
   background-color: black;
   color: white;
 }
@@ -179,7 +155,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content:flex-start;
-  min-height: 50vh;
+  max-height: 50vh;
   min-width: 35vw;
 }
 
