--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -5,8 +5,70 @@
   box-sizing: border-box;
   font-family: "Architects Daughter", cursive;
 }
+.animated-loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.animated-loader div {
+  box-sizing: border-box;
+  
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: animated-loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: rgb(0, 0, 0) transparent transparent transparent;
+}
+.animated-loader div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.animated-loader div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.animated-loader div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes animated-loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 
+.alert-about-error {
+  position: absolute;
+  bottom: 20px;
+  border: 3px solid black;
+  font-size: 1.3rem;
+  left: 20px;
+  border-radius: 2rem;
+  padding: 5px;
+  color: rgb(214, 11, 11);
+  opacity: 0;
+  transition: 0.8s;
+  animation: show 1s 1;
+  animation-fill-mode: forwards;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 body {
   margin: 0;
@@ -21,8 +83,8 @@ body {
   justify-content: center;
   align-items: center;
 }
-@media screen and (device-width: 1000px){
-.todo {
+@media screen and (device-width: 1000px) {
+  .todo {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,7 +99,7 @@ body {
     min-width: 40vw;
     height: 8vh;
     border-radius: 1rem;
-}
+  }
 }
 .conteiner {
   min-width: 50vw;
@@ -59,8 +121,6 @@ body {
   font-size: 2rem;
 }
 
-
-
 .todo__text-error {
   width: 40vw;
   height: 3rem;
@@ -71,10 +131,10 @@ body {
 }
 
 .paginate__button {
-    min-width: 2vw;
-    min-height: 3vh;
-    width: 4vw;
-   height: 6vh;
+  min-width: 2vw;
+  min-height: 3vh;
+  width: 4vw;
+  height: 6vh;
   max-width: 4vw;
   max-height: 6vh;
   /* Safari */
@@ -83,13 +143,12 @@ body {
   cursor: pointer;
   border-radius: 1rem;
   font-size: 1.2rem;
-
 }
 
-.paginate__button-active { 
-    background-color: black;
-    color: white;
-  }
+.paginate__button-active {
+  background-color: black;
+  color: white;
+}
 
 .paginate__button:hover {
   background-color: black;
@@ -112,8 +171,7 @@ body {
   width: 40vw;
 }
 
-
-.filter__button{
+.filter__button {
   background-color: white;
   color: black;
   border: 2px solid black;
@@ -125,7 +183,7 @@ body {
   margin-left: 2px;
 }
 
-.filter__button-active{
+.filter__button-active {
   background-color: black;
   color: white;
   border: 2px solid white;
@@ -151,7 +209,7 @@ body {
 
 .filter__arrow-active {
   background-color: white;
-  color:white;
+  color: white;
   filter: invert(100%);
   border: white;
   transition-duration: 0.4s;
@@ -159,8 +217,7 @@ body {
   border-radius: 1rem;
 }
 
-
-.sortBy-text{
+.sortBy-text {
   margin-right: 1rem;
 }
 .filter__arrow-up {
@@ -188,12 +245,11 @@ body {
 .todo-list {
   display: flex;
   align-items: flex-start;
-  justify-content:flex-start;
+  justify-content: flex-start;
   max-height: 50vh;
   min-height: 50vh;
   min-width: 35vw;
 }
-
 
 .filter-sort {
   display: flex;
@@ -219,24 +275,23 @@ li {
 }
 
 .todo-list__text {
- display: flex;
- justify-content: center;
- align-items: center;
- font-size: 1.6rem;
- min-width: 13vw;
-}
-
-.todo-list__input{
-    font-size: 1.6rem;
-    max-width: 13vw;
-}
-
-.todo-list__input-error{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.6rem;
-    max-width: 13vw;
-  background-color: rgb(194, 101, 101);
- }
+  min-width: 13vw;
+}
 
+.todo-list__input {
+  font-size: 1.6rem;
+  max-width: 13vw;
+}
+
+.todo-list__input-error {
+  font-size: 1.6rem;
+  max-width: 13vw;
+  background-color: rgb(194, 101, 101);
+}
 
 .input {
   border-radius: 1rem;
@@ -278,8 +333,8 @@ li {
 }
 
 .paginate {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 40vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40vw;
 }
