--- a/src/style-modules/filter.module.css
+++ b/src/style-modules/filter.module.css
@@ -20,6 +20,17 @@
   color: white;
 }
 
+.filter__button-active {
+  background-color: black;
+  color: white;
+  border: 2px solid white;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
 .filter__button {
   background-color: white;
   color: black;
