--- a/src/style-modules/Paginate.module.css
+++ b/src/style-modules/Paginate.module.css
@@ -24,9 +24,7 @@
   background-color: black;
   color: white;
 }
-.paginate {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 40vw;
+.ant-pagination{
+  width: 40vw;
+  flex-direction: row;
 }
