--- a/src/style-modules/style.css
+++ b/src/style-modules/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: "Architects Daughter", cursive;
 }
+
 .animated-loader {
   display: inline-block;
   position: relative;
@@ -76,7 +77,10 @@
     opacity: 0.5;
   }
 }
-
+.ant-pagination .paginate{
+  position: relative;
+  bottom: 0;
+}
 body {
   margin: 0;
   font-size: 1.5rem;
@@ -94,12 +98,23 @@ body {
   width: 50px;
   height: 50px;
 }
-.conteiner {
-  min-width: 50vw;
-  min-height: 75vh;
+
+.items-list{
+  margin-top: 1rem;
+  min-height: 38vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
+
+.conteiner {
+  width: 70vw;
+  min-height: 69vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
   border: 2px solid black;
   padding: 2rem;
   margin-top: 1vh;
@@ -250,37 +265,45 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-left: 4.6rem;
 }
 
 ul {
   flex-direction: column;
-  padding-inline-start: 0px;
 }
 
 li {
+  padding: 0px;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #212529;
-  margin-top: 10px;
   width: 40vw;
 }
+.ant-list-lg .ant-list-item {
+  padding: 0px;}
 
 .todo-list__text {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.6rem;
-  min-width: 13vw;
+  font-size: 1.2rem;
+  min-width: 6vw;
 }
+
+
+
+.ant-list-item.ant-list-item-no-flex{
+  padding: 0;
+}
+
 p {
   margin: 0;
 }
 
 .todo-list__input {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   max-width: 13vw;
+  color: black;
 }
 
 .todo-list__input-error {
@@ -311,6 +334,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.2rem;
+  color: black;
 }
 .todo-list__trashbin:hover {
   background-color: white;
@@ -322,4 +347,20 @@ p {
   justify-content: space-between;
   align-items: center;
   width: 40vw;
+}
+@media (max-width: 1000px) {
+  .todo-list__text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+  }
+
+  .todo-list__date {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7rem;
+    color: black;
+  }
 }
